--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,28 @@
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
-spring.datasource.url=jdbc:h2:file:./pettourdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# --- Configurações do JPA para PostgreSQL ---
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
 
 # Configurações do JWT
-api.jwt.secret=MySuperSecretKeyForJWTGeneration
+api.jwt.secret=${JWT_SECRET}
 api.jwt.expiration-hours=5
+
+
+# --- Configurações do H2 (Desativado) ---
+
+# spring.datasource.url=jdbc:h2:file:./pettourdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+
+
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.hibernate.ddl-auto=update
+
+
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
