--- a/render.yaml
+++ b/render.yaml
@@ -4,21 +4,20 @@ services:
     name: pettour-database
     env: postgres
     plan: free
-    # Verifique no Render qual a versão mais recente que eles suportam
     postgresMajorVersion: 16
 
   # Serviço da API Java (Web Service)
   - type: web
-    name: pettour-api # <-- NOME CORRIGIDO AQUI
+    name: pettour-api
     env: java
-    javaVersion: 17 # Define explicitamente a versão do Java
+    javaVersion: 17
     plan: free
     buildCommand: "./mvnw clean install"
     startCommand: "java -jar target/api-0.0.1-SNAPSHOT.jar"
     envVars:
       - key: SPRING_DATASOURCE_URL
         fromDatabase:
-          name: pettour-database # O mesmo nome que demos ao serviço do banco acima
+          name: pettour-database
           property: internalUrl
       - key: JWT_SECRET
-        sync: false # Pede para o valor ser inserido manualmente no painel
+        sync: false
