--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+# Conexão com o banco (Render injeta a string completa)
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=postgres
-spring.datasource.password=123456
+
+# Não definir username e password, pois já estão na URL
 
 # --- Configurações do JPA para PostgreSQL ---
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -9,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=validate
 # Configurações do JWT
 api.jwt.secret=${JWT_SECRET}
 api.jwt.expiration-hours=5
+
 
 
 # --- Configurações do H2 (Desativado) ---
