--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,24 @@
-# Conexão com o banco (Render injeta a string completa)
+# Conexão com o Banco de Dados (Forma Padrão e Segura)
+# O Spring Boot usará estas variáveis de ambiente fornecidas pelo Render.
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-
-# Não definir username e password, pois já estão na URL
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # --- Configurações do JPA para PostgreSQL ---
+# Informa ao Hibernate qual "dialeto" SQL usar.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
 
-# Configurações do JWT
+# 'update' cria/atualiza as tabelas no banco de dados automaticamente.
+# Ideal para o primeiro deploy e para desenvolvimento.
+spring.jpa.hibernate.ddl-auto=update
+
+# Opcional: Mostra os comandos SQL gerados pelo Hibernate no log. Ajuda a debugar.
+spring.jpa.show-sql=true
+
+# --- Configurações do JWT ---
+# Certifique-se de que a variável de ambiente JWT_SECRET existe no Render.
 api.jwt.secret=${JWT_SECRET}
 api.jwt.expiration-hours=5
-
-
 
 # --- Configurações do H2 (Desativado) ---
 
