--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,20 @@
-# Conexão com o Banco de Dados (Forma Padrão e Segura)
-# O Spring Boot usará estas variáveis de ambiente fornecidas pelo Render.
+# --- Conexão com o Banco de Dados (PostgreSQL no Render) ---
+# A URL completa, incluindo usuário e senha, será lida da variável de ambiente.
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # --- Configurações do JPA para PostgreSQL ---
 # Informa ao Hibernate qual "dialeto" SQL usar.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # 'update' cria/atualiza as tabelas no banco de dados automaticamente.
-# Ideal para o primeiro deploy e para desenvolvimento.
+# Ótimo para o primeiro deploy. Depois, podemos mudar para 'validate' para mais segurança.
 spring.jpa.hibernate.ddl-auto=update
 
 # Opcional: Mostra os comandos SQL gerados pelo Hibernate no log. Ajuda a debugar.
 spring.jpa.show-sql=true
 
 # --- Configurações do JWT ---
-# Certifique-se de que a variável de ambiente JWT_SECRET existe no Render.
+# A chave secreta será lida da variável de ambiente no Render.
 api.jwt.secret=${JWT_SECRET}
 api.jwt.expiration-hours=5
 
