--- a/render.yaml
+++ b/render.yaml
@@ -10,14 +10,14 @@ services:
   - type: web
     name: pettour-api
     env: java
-    javaVersion: 17 # <-- Define explicitamente a versão do Java
+    javaVersion: 17
     plan: free
     buildCommand: "./mvnw clean package"
     startCommand: "java -jar target/api-0.0.1-SNAPSHOT.jar"
     envVars:
       - key: SPRING_DATASOURCE_URL
         fromDatabase:
-          name: pettour-database # O mesmo nome que demos ao serviço do banco acima
+          name: pettour-database
           property: internalUrl
       - key: JWT_SECRET
-        sync: false # Pede para o valor ser inserido manualmente no painel
+        sync: false
