--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,3 @@
-# --- Conexão com o Banco de Dados (PostgreSQL no Render) ---
-# A URL completa, incluindo usuário e senha, será lida da variável de ambiente.
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-
-# --- Configurações do JPA para PostgreSQL ---
-# Informa ao Hibernate qual "dialeto" SQL usar.
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# 'update' cria/atualiza as tabelas no banco de dados automaticamente.
-# Ótimo para o primeiro deploy. Depois, podemos mudar para 'validate' para mais segurança.
-spring.jpa.hibernate.ddl-auto=update
-
-# Opcional: Mostra os comandos SQL gerados pelo Hibernate no log. Ajuda a debugar.
-spring.jpa.show-sql=true
-
-# --- Configurações do JWT ---
-# A chave secreta será lida da variável de ambiente no Render.
-api.jwt.secret=${JWT_SECRET}
-api.jwt.expiration-hours=5
-
-# --- Configurações do H2 (Desativado) ---
-
 # spring.datasource.url=jdbc:h2:file:./pettourdb
 # spring.datasource.driverClassName=org.h2.Driver
 # spring.datasource.username=sa
@@ -33,3 +11,18 @@ api.jwt.expiration-hours=5
 # spring.h2.console.enabled=true
 # spring.h2.console.path=/h2-console
 
+# Configuração do Banco de Dados
+spring.datasource.url=jdbc:postgresql://aws-1-sa-east-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.kykicntbkdnvqhfnrqzb
+spring.datasource.password=123456
+
+# Configuração JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configurações do JWT
+api.jwt.secret=MySuperSecretKeyForJWTGeneration
+api.jwt.expiration-hours=5
