--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,13 @@ spring.datasource.url=jdbc:postgresql://aws-1-sa-east-1.pooler.supabase.com:5432
 spring.datasource.username=postgres.kykicntbkdnvqhfnrqzb
 spring.datasource.password=123456
 
+# Connection pool tuning (adjust if needed)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=10000
+
 # Configuração JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
