--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@
 # spring.h2.console.path=/h2-console
 
 # Configuração do Banco de Dados
-spring.datasource.url=jdbc:postgresql://aws-1-sa-east-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.kykicntbkdnvqhfnrqzb
-spring.datasource.password=123456
+spring.datasource.url=postgresql://user:QV1Y1RqAxQmPbM0IzhfIiabEgnQgMQ2V@dpg-d30vu37diees73acjio0-a.oregon-postgres.render.com/pettourbd_b4e2
+spring.datasource.username=user
+spring.datasource.password=QV1Y1RqAxQmPbM0IzhfIiabEgnQgMQ2V
 
 # Connection pool tuning (adjust if needed)
 spring.datasource.hikari.maximum-pool-size=5
