--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 # spring.h2.console.path=/h2-console
 
 # Configuração do Banco de Dados
-spring.datasource.url=postgresql://user:QV1Y1RqAxQmPbM0IzhfIiabEgnQgMQ2V@dpg-d30vu37diees73acjio0-a.oregon-postgres.render.com/pettourbd_b4e2
+spring.datasource.url=jdbc:postgresql://dpg-d30vu37diees73acjio0-a:5432/pettourbd_b4e2
 spring.datasource.username=user
 spring.datasource.password=QV1Y1RqAxQmPbM0IzhfIiabEgnQgMQ2V
 
